# RoboNix-Retrieval-Augmented-Toolkit

./: .gitignore  CITATION.cff  CONTRIBUTORS.md  NEWS.md  README-CN.md  README.md  TODO.md  __init__.py  pyproject.toml  service_bootstrap.py
benchmarks/rebuttal/: Plan.md  README.md  Review.md
benchmarks/rebuttal/docs/: flash_memory_retrieval.md  rtcache_mix_retrieval.md
benchmarks/specvla_validation/: .gitignore  HOW_TO_RUN.md  IDEA实现笔记.md  LICENSE  README.md  RETRIEVAL_VERIFY_IMPLEMENTATION.md  Record.md  TEST_TIMING_MODIFICATIONS.md  demo.py  ideas.md  new_test.ipynb  new_test_curvature.ipynb  new_test_curvature_v.ipynb  quick_start_retrieval_verify.sh  requirements-min.txt  run_timing_test.sh  test.ipynb  trajectory_compare_standalone.py  vis_dis.py  vis_dis_.py  vis_zhexian.py
configs/: .env.example  README.md
configs/database/: qdrant_config.yaml
docs/assets/: IMAGEGEN_PROMPTS.md
modules/: __init__.py  _registry.py
modules/database/: __init__.py
modules/indexing/: __init__.py
modules/memory_update/: __init__.py
modules/retrieval/: __init__.py
modules/scene_encoding/: __init__.py
modules/verified_execution/: __init__.py
scripts/: __init__.py  run.py
scripts/maintenance/: backup_qdrant.py  build_bridge_increments.py  build_bridge_increments_mix.py  report_backup_sizes.py  restore_qdrant.py
scripts/serve/: retrieval_libero_goal_mix.py
tests/: test_layout.py  test_lazy_catalogs.py
utils/: __init__.py
utils/database/: __init__.py
utils/embedding/: __init__.py
utils/image/: __init__.py
utils/logging/: __init__.py
(+174 files in other folders)
